# autoSuper-Artificial-Intelligence

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CLI-USAGE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_OPTIMIZATION.md  QUICKSTART.md  README.md  SECURITY.md  TROUBLESHOOTING.md  agent_factory.py  cli.py  emotion_engine.py  pso.py  pyproject.toml  rag_retriever.py  retrain_cron.sh
BrainSimulationSystem/: brain_simulation.py  main.py
algorithm_library/: __init__.py  library.py
algorithms/: README.md  __init__.py  aco.py  base.py  examples.py  ga.py  plugin_loader.py  pso.py  random_search.py  template.py  utils.py
autogpts/: factory.py
backend/: agent_factory.py  concept_alignment.py  factory.py  rag_retriever.py
benchmark/: embedding_search_benchmark.py  pyproject.toml  task_queue_benchmark.py
benchmark/agbenchmark/: README.md  main.py
benchmarks/: README.md  embedding_search.py  sorting_benchmark.txt  test_quantum_benchmark.py
capability/: distributed_search.py  librarian.py  skill_library.py  vector_index.py
common/: __init__.py  security.py
config/: .env.example  ga_example.yaml  logging.yaml  meta_learning.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  README.md  RELEASE_NOTES.md  TROUBLESHOOTING.md  active_learning_sampler.md  agi_roadmap.md  agi_vision_cn.md  algorithm_requirements.md  api.md  brain_simulation_status.md  configuration.md  dynamic_network.md  embedding_search.md  embedding_search_benchmark.md  governance.md  hardware_backends.md  index.md  mkdocs.yml  netlify.toml  neuro_symbolic_solver.md  optimization.md  performance_monitor.md  quantum_cognition_features.md  requirements.txt  resource_rl_benchmark.md  retraining_pipeline.md  self_learning.md
events/: __init__.py  client.py  coordination.py  redis_bus.py
evolution/: __init__.py  founder.py  generic_ga.py  metrics_history.csv  ml_model.py  policy_trainer.py  resource_rl.py  self_improvement.py  strategist.py
execution/: __init__.py  auto_scheduler.py  coordinator.py  executor.py  manager.py  scheduler.py
founder_agent/: __init__.py  analytics.py
governance/: __init__.py  architect_review.md  meta_ticket.py  queue.py
metrics/: recorder.py
ml/: __init__.py  experience_collector.py  retraining_pipeline.py
modules/: README.md  requirements.txt
monitoring/: __init__.py  action_logger.py  api.py  dataset_buffer.py  feature_extractor.py  performance_monitor.py  retraining_workflow.py  storage.py  system_metrics.py  train_baselines.py
runner/: experiment.py
schemas/: emotion.py
scripts/: analyze_runtime.py  auto_optimizer_experiment.py  benchmark_sorting.py  build_docs.sh  bump_version.py  check_version.py  cli.py  deploy_parameters.py  evolution_experiment.py  ga_multi_metric_example.py  generate_user_config_docs.py  migrate_config_registry.py  run  setup.ps1  setup.sh
tests/: conftest.py  test_agent_factory_executor_integration.py  test_agent_lifecycle_manager.py  test_algorithm_library.py  test_algorithms.py  test_audio_gen.py  test_cerebellum_integration.py  test_creative_planner.py  test_embedding_chunking_search.py  test_emotion_engine.py  test_env_validation.py  test_evaluate_metrics.py  test_executor.py  test_experience_learning.py  test_feature_extractor.py  test_founder_ml_model.py  test_genesis_team_manager.py  test_manager_cleanup.py  test_metrics_collector.py  test_metrics_recorder.py  test_ml_training_strategies.py  test_monitoring.py  test_motor_actuator_integration.py  test_motor_cortex.py  test_neural_oscillations.py  test_new_modules.py  test_nn_architectures.py  test_on_response_updates.py  test_one_shot_model_classification.py  test_performance_monitor.py  test_planner_executor.py  test_policy_trainer.py  test_prompt_tokens.py  test_reasoning_planner.py  (+9 more)
(+414 files in other folders)
