[tool.poetry]
name = "autogpt-monorepo"
version = "0.0.0"
description = "Unified AutoGPT workspace"
authors = ["AutoGPT Contributors <support@agpt.co>"]

[tool.poetry.workspace]
members = [
  "backend/autogpts/autogpt",
  "backend/autogpts/autogpt/autogpt/core", 
  "backend/autogpts/forge",
  "modules/benchmark"
]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.7.2"
click = "^8.1.7"
colorama = "^0.4.6"
pydantic = "^1.10.12"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
fastapi = "^0.109.1"
uvicorn = "^0.23.2"
selenium = "^4.13.0"
tenacity = "^8.2.2"
gitpython = "^3.1.32"
psutil = "^5.9.5"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
networkx = "^3.1"
pyvis = "^0.3.2"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
python-multipart = "^0.0.7"
toml = "^0.10.2"
httpx = "^0.24.0"
agent-protocol-client = "^1.1.0"
click-default-group = "^1.2.4"
tabulate = "^0.9.0"
beautifulsoup4 = "^4.12.2"
boto3 = "^1.33.6"
charset-normalizer = "^3.1.0"
demjson3 = "^3.0.0"
distro = "^1.8.0"
docker = "*"
duckduckgo-search = "^5.0.0"
ftfy = "^6.1.1"
gTTS = "^2.3.1"
hypercorn = "^0.14.4"
jsonschema = "^4.19.1"
openapi-python-client = "^0.14.0"
orjson = "^3.8.10"
pinecone-client = "^2.2.1"
playsound = "~1.2.2"
pypdf = "^3.1.0"
pyyaml = "^6.0"
readability-lxml = "^0.8.1"
redis = "*"
spacy = "^3.0.0"
tiktoken = "^0.5.1"
google-cloud-logging = "^3.8.0"
google-cloud-storage = "^2.13.0"
psycopg2-binary = "^2.9.9"
agent-protocol = "^1.0.2"
colorlog = "^6.7.0"
sqlalchemy = "^2.0.19"
aiohttp = "^3.8.5"
chromadb = "^0.4.10"
jinja2 = "^3.1.2"
litellm = "^1.17.9"
bs4 = "^0.0.1"
auto-gpt-plugin-template = { git = "https://github.com/Significant-Gravitas/Auto-GPT-Plugin-Template", rev = "0.1.0" }
autogpt-forge = { path = "autogpts/forge" }
agbenchmark = { path = "benchmark", optional = true }
pytest-benchmark = "^3.4.1"
coverage = "^7.2.7"
cachetools = "^5.3.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest-mock = "^3.12.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
autoflake = "^2.2.0"
types-requests = "^2.31.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
